--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^22",
