--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19",
