--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datocms/cda-client": "^0.2.6",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
