--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
   },
   "dependencies": {
     "@datocms/cda-client": "^0.2.6",
+    "@datocms/cma-client": "^3.4.3",
     "class-variance-authority": "^0.7.1",
+    "datocms-structured-text-to-plain-text": "^4.0.2",
+    "datocms-structured-text-utils": "^4.0.1",
+    "gql.tada": "^1.8.10",
+    "highlight.js": "^11.11.1",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19",
+    "react-datocms": "^7.1.0",
     "react-dom": "^19",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "serialize-error": "^12.0.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^8.0.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.5.1",
+    "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
