--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint && prettier --check .",
+    "generate-schema": "dotenv -c -- bash -c 'gql.tada generate schema https://graphql.datocms.com --header \"X-Exclude-Invalid: true\" --header \"Authorization: $DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN\"'",
+    "format": "npx prettier . --write",
+    "prepare": "npx simple-git-hooks && npm run generate-schema"
   },
   "dependencies": {
     "@datocms/cda-client": "^0.2.6",
@@ -38,6 +41,9 @@
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run format"
   },
   "engines": {
     "node": "21.1.0"
