📦: Added next-auth dependency 🔒️: [Work in progress] - Included integration with keycloak

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19",
     "react-dom": "^19",
     "recharts": "^2.15.1"
