--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
     "dotenv-cli": "^8.0.0",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.5.1",
     "simple-git-hooks": "^2.11.1",
