--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@datocms/cda-client": "^0.2.6",
     "@datocms/cma-client": "^3.4.3",
+    "@types/react-calendar": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "datocms-structured-text-to-plain-text": "^4.0.2",
     "datocms-structured-text-utils": "^4.0.1",
@@ -23,6 +24,7 @@
     "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19",
+    "react-calendar": "^5.1.0",
     "react-datocms": "^7.1.0",
     "react-dom": "^19",
     "recharts": "^2.15.1",
