:arrow_up: feat: update next version

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@datocms/cma-client": "^3.4.3",
     "@types/react-calendar": "^4.1.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "datocms-structured-text-to-plain-text": "^4.0.2",
     "datocms-structured-text-utils": "^4.0.1",
     "gql.tada": "^1.8.10",
@@ -22,14 +23,15 @@
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
-    "next": "15.1.6",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19",
     "react-calendar": "^5.1.0",
     "react-datocms": "^7.1.0",
     "react-dom": "^19",
     "recharts": "^2.15.1",
-    "serialize-error": "^12.0.0"
+    "serialize-error": "^12.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
