--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
+  "plugins": ["ds"],
   "rules": {
+    "ds/no-inline-button-class": "error",
     "react/no-unescaped-entities": "off",
     "react/react-in-jsx-scope": "off",
     "import/no-anonymous-default-export": "off",
