changed cp command

--- a/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
+++ b/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           mkdir deploy
-          cp -r .next node_modules public package.json next.config.js deploy/
+          cp -r .next node_modules public package.json deploy/
           cd deploy
           zip -r ../release.zip .
 
