--- a/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
+++ b/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - smym-frontend
+name: Build and deploy Next.js app to Azure Web App - smym-frontend
 
 on:
   push:
@@ -7,10 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     env:
       NEXT_DATOCMS_CMA_TOKEN: ${{ secrets.NEXT_DATOCMS_CMA_TOKEN }}
@@ -18,9 +16,10 @@ jobs:
       NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN: ${{ secrets.NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
@@ -28,46 +27,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build app
+      - name: Build Next.js app
         run: npm run build
 
-      - name: Remove dev dependencies
-        run: npm prune --production
-
-      - name: Zip artifact for deployment
-        run: |
-          mkdir deploy
-          cp -r .next node_modules public package.json deploy/
-          cd deploy
-          zip -r ../release.zip .
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Login to Azure
+        uses: azure/login@v2
         with:
-          name: node-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+          creds: ${{ secrets.__publishingprofilesecretname__ }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'smym-frontend'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
