--- a/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
+++ b/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
@@ -30,14 +30,10 @@ jobs:
       - name: Build Next.js app
         run: npm run build
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.__publishingprofilesecretname__ }}
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'smym-frontend'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
           package: .
