--- a/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
+++ b/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - smym-frontend
+name: Build and deploy Next.js app to Azure Web App
 
 on:
   push:
@@ -9,56 +6,39 @@ on:
       - feature/add-new-github-workflow-branch
   workflow_dispatch:
 
+env:
+  APPLICATION_PUBLISH_PROFILE: ${{ secrets.APP_PUBLISH_PROFILE }}
+  WEBAPP_NAME: 'frontend'
+  NEXT_DATOCMS_CMA_TOKEN: ${{ secrets.NEXT_DATOCMS_CMA_TOKEN }}
+  NEXT_DATOCMS_DRAFT_CONTENT_CDA_TOKEN: ${{ secrets.NEXT_DATOCMS_DRAFT_CONTENT_CDA_TOKEN }}
+  NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN: ${{ secrets.NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
+          mv ./build/static ./build/standalone/build
+          mv ./public ./build/standalone
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'smym-frontend'
+          app-name: ${{ env.WEBAPP_NAME }}
           slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_83046BCE88D74E3CA6B1CBCA49D8A9FC }}
+          publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
+          package: ./build/standalone
+
+
