--- a/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
+++ b/.github/workflows/feature-add-new-github-workflow-branch_smym-frontend.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   APPLICATION_PUBLISH_PROFILE: ${{ secrets.APP_PUBLISH_PROFILE }}
-  WEBAPP_NAME: 'frontend'
+  WEBAPP_NAME: 'smym-frontend'
   NEXT_DATOCMS_CMA_TOKEN: ${{ secrets.NEXT_DATOCMS_CMA_TOKEN }}
   NEXT_DATOCMS_DRAFT_CONTENT_CDA_TOKEN: ${{ secrets.NEXT_DATOCMS_DRAFT_CONTENT_CDA_TOKEN }}
   NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN: ${{ secrets.NEXT_DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN }}
