--- a/.github/workflows/feature-keycloak-integration_smym-frontend.yml
+++ b/.github/workflows/feature-keycloak-integration_smym-frontend.yml
@@ -25,12 +25,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build, and prepare output
         run: |
           npm install
           npm run build
-          mv ./build/static ./build/standalone/build
-          mv ./public ./build/standalone
+          cp -r public .next/standalone/
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
