--- a/.github/workflows/feature-keycloak-integration_smym-frontend.yml
+++ b/.github/workflows/feature-keycloak-integration_smym-frontend.yml
@@ -25,11 +25,12 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and prepare output
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build
-          cp -r public .next/standalone/
+          mv ./build/static ./build/standalone/build
+          mv ./public ./build/standalone
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
