--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.12.6",
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "next": "^15.3.1",
@@ -29,12 +30,14 @@
     "react-calendar": "^5.1.0",
     "react-datocms": "^7.1.0",
     "react-dom": "^19",
+    "react-player": "^2.16.0",
     "recharts": "^2.15.1",
     "serialize-error": "^12.0.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
