--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@botui/react": "^1.1.5",
     "@datocms/cda-client": "^0.2.6",
     "@datocms/cma-client": "^3.4.3",
     "@types/react-calendar": "^4.1.0",
+    "botui": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "datocms-structured-text-to-plain-text": "^4.0.2",
