--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@datocms/cda-client": "^0.2.6",
     "@datocms/cma-client": "^3.4.3",
     "@formspree/react": "^3.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react-calendar": "^4.1.0",
     "botui": "^1.1.3",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "datocms-structured-text-to-plain-text": "^4.0.2",
     "datocms-structured-text-utils": "^4.0.1",
     "gql.tada": "^1.8.10",
+    "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
